<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/navigationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/storeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_title_label"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/navigationIcon"
        app:layout_constraintEnd_toEndOf="@id/userPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/navigationIcon" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPhoto"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="47dp"
        android:src="@drawable/baseline_account_circle_24"
        app:civ_border_color="#C0C0C0"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/searchFieldContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="6dp"
        android:text="@string/location_label"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/locationIcon"
        app:layout_constraintStart_toStartOf="@id/userPhoto"
        app:layout_constraintTop_toBottomOf="@id/userPhoto" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_button_desc"
        android:rotation="90"
        android:src="@drawable/ic_button_arrow"
        app:layout_constraintBottom_toBottomOf="@id/locationLabel"
        app:layout_constraintEnd_toEndOf="@id/userPhoto"
        app:layout_constraintStart_toEndOf="@id/locationLabel"
        app:layout_constraintTop_toTopOf="@id/locationLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchFieldContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="9dp"
        android:importantForAutofill="no"
        app:boxBackgroundMode="outline"
        app:expandedHintEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationLabel">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/searchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_field_bg"
            android:drawableEnd="@drawable/ic_search"
            android:inputType="text"
            android:textAlignment="center"
            android:padding="7dp"
            android:textColorHint="#5B5B5B"
            android:textSize="11sp"
            android:hint="@string/search_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/categoriesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchFieldContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="11dp"
            android:text="@string/phones_category_name"
            android:textAlignment="center"
            android:textSize="8sp"
            app:drawableTopCompat="@drawable/ic_phone_category"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="11dp"
            android:text="@string/headphones_category"
            android:textAlignment="center"
            android:textSize="8sp"
            app:drawableTopCompat="@drawable/ic_headphone_category"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="11dp"
            android:text="@string/games_category_name"
            android:textAlignment="center"
            android:textSize="8sp"
            app:drawableTopCompat="@drawable/ic_games_category"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="11dp"
            android:text="@string/cars_category_label"
            android:textAlignment="center"
            android:textSize="8sp"
            app:drawableTopCompat="@drawable/ic_cars_category"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="11dp"
            android:text="@string/furniture_category_name"
            android:textAlignment="center"
            android:textSize="8sp"
            app:drawableTopCompat="@drawable/ic_furniture_category"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="11dp"
            android:text="@string/kids_category_name"
            android:textAlignment="center"
            android:textSize="8sp"
            app:drawableTopCompat="@drawable/ic_kids_category"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/contentErrorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:lineSpacingExtra="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableTopCompat="@drawable/ic_no_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Something went wrong!\nTry again later!"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesContainer"
        tools:visibility="visible">

        <include
            android:id="@+id/latestSection"
            layout="@layout/latest_section" />

        <include
            android:id="@+id/flashSaleSection"
            layout="@layout/flashsale_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>