<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:foreground="@drawable/good_image_mask"
    android:layout_marginHorizontal="4.5dp"
    android:layout_width="174dp"
    android:layout_height="221dp">

    <ImageView
        android:id="@+id/latestImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/latest_image_desc"
        android:scaleType="centerCrop"
        android:foreground="@drawable/good_image_mask"
        android:background="@drawable/good_image_mask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/baseline_account_circle_24"
        app:civ_border_color="#C0C0C0"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/discount_bg"
        android:paddingHorizontal="4dp"
        android:paddingVertical="1dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp"
        tools:text="30 % off" />

    <TextView
        android:id="@+id/flashCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/good_category_bg"
        android:paddingHorizontal="6dp"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@id/flashName"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp"
        tools:text="Phones" />

    <TextView
        android:id="@+id/flashName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/flashPrice"
        app:layout_constraintEnd_toStartOf="@id/flashFavoriteButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp"
        tools:text="Samsung S10" />

    <TextView
        android:id="@+id/flashPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="7dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp"
        tools:text="$ 180,000" />

    <ImageButton
        android:id="@+id/flashAddButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/add_button_bg"
        android:contentDescription="@string/add_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_flash" />

    <ImageButton
        android:id="@+id/flashFavoriteButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/add_button_bg"
        android:contentDescription="@string/favorite_button_desc"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@id/flashAddButton"
        app:layout_constraintEnd_toStartOf="@id/flashAddButton"
        app:layout_constraintTop_toTopOf="@id/flashAddButton" />
</androidx.constraintlayout.widget.ConstraintLayout>